Update for 4.11.4 (OpenJDK 16)