@@ -35,6 +35,7 @@ exec gosu artemis java \
   -Xmx2048m \
   --add-modules java.se \
   --add-exports java.base/jdk.internal.ref=ALL-UNNAMED \
+  --add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED \
   --add-opens java.base/java.lang=ALL-UNNAMED \
   --add-opens java.base/java.nio=ALL-UNNAMED \
   --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
